--- a/gb/20/3/12/n11935496.md
+++ b/gb/20/3/12/n11935496.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pyaar2355/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pyaar2355/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/pyaar2355/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pyaar2355/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pyaar2355/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pyaar2355/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pyaar2355/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xcbfpq327/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>立委疑黑鹰事故真相 吁运安会调查纳军方</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/79524a00e0525e69180e25dfdea2d686-600x400.jpg" />
 <h6>国家运输安全调查委员会主任委员杨宏智（左）12日列席立法院交通委员会报告业务概况，并备质询。（陈柏州／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年03月12日讯】（大纪元记者吴美莲台湾台北报导）年初发生黑鹰直升机坠毁事件，国防部已在日前公布调查报告。12日立法院交通委员会上，有立委指出，由空军自己调查自己，缺乏第三方调查的机制，让事故真相无法被知道，呼吁<a href="https://github.com/pyaar2355/djy/blob/master/gb/tag/%E8%BF%90%E5%AE%89%E4%BC%9A.md">运安会</a>也应调查军方的运安事故。</p>
-<p>立法院交通委员会12日邀请国家运输安全调查委员会主任委员杨宏智列席报告业务概况，并备质询。立委林俊宪质询时指出，黑鹰事件调查的主体是空军，<a href="https://github.com/pyaar2355/djy/blob/master/gb/tag/%E8%BF%90%E5%AE%89%E4%BC%9A.md">运安会</a>只是解读黑盒子，而国防部称该事件归咎于地理与天候等因素，这样的说法相当模糊。</p>
+<p>【大纪元2020年03月12日讯】（大纪元记者吴美莲台湾台北报导）年初发生黑鹰直升机坠毁事件，国防部已在日前公布调查报告。12日立法院交通委员会上，有立委指出，由空军自己调查自己，缺乏第三方调查的机制，让事故真相无法被知道，呼吁<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%BF%90%E5%AE%89%E4%BC%9A.md#1">运安会</a>也应调查军方的运安事故。</p>
+<p>立法院交通委员会12日邀请国家运输安全调查委员会主任委员杨宏智列席报告业务概况，并备质询。立委林俊宪质询时指出，黑鹰事件调查的主体是空军，<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%BF%90%E5%AE%89%E4%BC%9A.md#1">运安会</a>只是解读黑盒子，而国防部称该事件归咎于地理与天候等因素，这样的说法相当模糊。</p>
 <p>林俊宪表示，现在的科技非常进步，飞机对地理环境的观测都很精准，也有安全隔离机制，对气候预测有即时的雷达系统，国防部怎么会把肇事原因归咎给天候与地理环境。</p>
 <p>林俊宪表示，运安会应该坚持成为该起事故的专责调查机构，这次由空军调查自己的事故，就跟过去台铁调查自己一样，恐无法查到真相，必须有第三方单位的调查，才容易把事故真相调查出来，呼吁未来运安会未来也应调查国防部的运安事件。</p>
 <p>运安会主委杨宏智说，黑鹰这个事故，运安会是接受国防部委托，只解读黑盒子，因根据运输事故调查法，飞航事故调查，有民用航空器及公务航空器，但不包括由国防部主管的军用航空器。</p>
@@ -15,37 +15,50 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/12/n11935496.htm">立委疑黑鹰事故真相 吁运安会调查纳军方</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/15/n11870339.htm">黑鹰事故属复合因素 空军：天气骤变不及爬高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11797347.htm">徐衍璞接副参谋总长 台湾第一位原住民上将</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/13/n11790627.htm">黑鹰殉职将士移柩 沿途民众致敬 蔡英文亲悼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/4/n11767748.htm">哀悼黑鹰事故殉职将士　林右昌向英灵致意</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/3/n11765760.htm">国民党追思黑鹰殉职将士 吴敦义哽咽落泪</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/3/11/n11931609.htm">【拍案惊奇】习武汉行 官媒发诡异“墓碑照”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/11/n11933407.htm">【新闻看点】中共控制住了疫情？七大疑问</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/11/n11933129.htm">武汉青山区用垃圾车运菜运肉 引民愤</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/11/n11931518.htm">【翻墙必看】武汉瘟疫的风向和目标</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11918136.htm">透露天机 太白山刘伯温碑记更多内涵</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11918064.htm">【文史】为一场地震 冥界筹备了50年</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11920009.htm">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/9/n11926997.htm">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11929515.htm">组图：习近平到武汉 网民披露各家遭遇</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11930181.htm">习近平视察武汉 市民打横幅：我们要吃肉</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11928576.htm">【拍案惊奇】他们紧挨中国 却没爆发疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/9/n11925870.htm">【十字路口】病毒大挪移？透视中共诡异宣传</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11930378.htm">【新闻看点】高楼布狙击手 习访武汉3大用意？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11928576.htm">【拍案惊奇】他们紧挨中国 却没爆发疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11930783.htm">成龙舔共言论招武汉肺炎？台湾名嘴发帖狠酸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11930065.htm">曝女儿深夜对话 辛龙心碎“霓霓太想妈妈了”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/9/n11928254.htm">演员袁立微博疑遭永久禁言 背后原因成谜</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/11/n11933325.htm">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/10/n11931040.htm">晒暴饮暴食剧照 孙俪提醒粉丝不要效仿</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/3/n11765760.md#1">国民党追思黑鹰殉职将士 吴敦义哽咽落泪</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/4/n11767748.md#1">哀悼黑鹰事故殉职将士　林右昌向英灵致意</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/13/n11790627.md#1">黑鹰殉职将士移柩 沿途民众致敬 蔡英文亲悼</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/16/n11797347.md#1">徐衍璞接副参谋总长 台湾第一位原住民上将</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/2/15/n11870339.md#1">黑鹰事故属复合因素 空军：天气骤变不及爬高</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527555.md#1">台民团吁保障移工就医权 疾管署：将与专家研商</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527558.md#1">蓝委郑天财不满退辅会 对冯世宽拍桌泼咖啡</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527567.md#1">寺庙沦私产恐遭继承 台内政部：转宗教团体名下</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527560.md#1">台铁断轨检讨报告出炉 提3大面向</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527562.md#1">中共办“马习会”研讨 台陆委会：统战本质</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/pyaar2355/djy/blob/master/gb/20/3/12/n11935496.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pyaar2355/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pyaar2355/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pyaar2355/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pyaar2355/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pyaar2355/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/16/n9964704.md#1" target="_blank">刘晓：正统婚礼有深意 中共扭曲藏祸心</a></li><li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525168.md#1">【珍言真语】记者忆采访被刺：报真相不退缩</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1">【思想领袖】纳瓦罗：美媒成中共“有用白痴”</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520354.md#1">【图解】2020美国大选 投票结果何时出</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520247.md#1">华为副总裁深圳猝死 曾在伦敦当记者</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522915.md#1">夫妻俩持不同政见 黄秋生有一套相处之道</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520656.md#1">邓超上火获9岁儿支招 网友：父子似互换角色</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520245.md#1">罹癌后存活50年  台大医师：爬山是一帖良药</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515130.md#1">这些蔬果有苦味别吃 可致中毒！误食3步处理</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524129.md#1">被寄养小狗花半个月走100公里回家找主人</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520485.md#1">足底筋膜炎4招改善！症状、治疗和复健全图解</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521919.md#1">传川普同意出售F-22战机给以色列</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/12/n11935496.htm">立委疑黑鹰事故真相 吁运安会调查纳军方</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/20/3/12/n11935496.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
